# hssm-bayesflow-workshop

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: data_generator.py  hssm_bayesflow.ipynb  hssm_sandbox.ipynb  rlssm_tutorial.ipynb  rv_to_hssm.ipynb  ssms_bayesflow.ipynb  workshop_data_genators.ipynb  workshop_data_generator.ipynb  workshop_data_rlssm.ipynb  workshop_data_rlssm_backup.ipynb  workshop_data_ssm.ipynb
notebooks/data/angle_regression_data/: angle_regression_full.parquet  angle_regression_modeling.parquet  angle_regression_parameters.pkl
notebooks/data/angle_rl_data/: angle_rl_full.parquet  angle_rl_modeling.parquet  angle_rl_parameters.pkl
notebooks/data/angle_sticky_choice_data/: angle_sticky_choice_full.parquet  angle_sticky_choice_modeling.parquet  angle_sticky_choice_parameters.pkl
notebooks/data/basic_angle_data/: basic_angle_full.parquet  basic_angle_modeling.parquet  basic_angle_parameters.pkl
notebooks/data/basic_ddm_data/: basic_ddm_full.parquet  basic_ddm_modeling.parquet  basic_ddm_parameters.pkl
